# ptypes

./: .coverage  .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  tox.ini  versioneer.py
src/ptypes/: __init__.py  _version.py  consts.py  core.py
src/ptypes/consts/: __init__.py  core.py  exts.py  misc.py  phymath.py  presto.py  psrfits.py  sigproc.py  tempo.py
src/ptypes/core/: __init__.py  ptype.py
src/ptypes/folded/: __init__.py  folded.py
src/ptypes/fourier/: __init__.py  fourier.py
src/ptypes/freqxtime/: freqxtime.py  observation.py  spectra.py
src/ptypes/metadata/: __init__.py  metadata.py
src/ptypes/par/: PTypePAR.py  __init__.py
src/ptypes/presto/: PTypeACCEL.py  PTypeBESTPROF.py  PTypeDAT.py  PTypeFFT.py  PTypeINF.py  PTypePFD.py  __init__.py  core.py
src/ptypes/psrchive/: PTypePSRCHIVE.py  __init__.py  core.py
src/ptypes/psrfits/: PTypePSRFITS.py  __init__.py  core.py
src/ptypes/sigproc/: PTypeFIL.py  PTypeHEADER.py  PTypeRAW.py  PTypeSPEC.py  PTypeTIM.py  __init__.py  core.py
src/pulsartypes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  example.inf  test.cand  test.pfd.bestprof  test_metadata.py  test_presto.py  test_tseries.py
tests/data/: test.bestprof  test.par  test.pfd.polycos  test.polycos  test_fake_presto_radio.inf  test_fold_fits.rcf32t4
tests/presto/: test_bprof.py  test_dat.py  test_fft.py  test_inf.py  test_pfd.py
tests/sigproc/: test_fil.py  test_hdr.py
tests/tempo/: test_par.py  test_polycos.py
(+41 files in other folders)
