[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

# NOTE TO DEVELOPERS ONLY:
# As of March 2020, the latest official release of versioneer (0.18)
# does not support custom cmdclass in setup.py. Setting up versioneer
# for ffapipe thus requires using the tip of the master branch on github.
# pip install git+https://github.com/warner/python-versioneer@master

# And then proceed with installation instructions:
# https://github.com/warner/python-versioneer/blob/master/INSTALL.md
[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/ptypes/_version.py
versionfile_build =

# A string, like 'PROJECTNAME-', which appears at the
# start of all VCS tags.
tag_prefix = 'ptypes-'

# Optional string, frequently the same as tag_prefix,
# which appears at the start of all unpacked tarball
# filenames.
parentdir_prefix = ptypes-
